# usecase_hedges

./: .gitmodules  CMakeLists.txt  Makefile  README.md  dbgtraceback_0_0  dbgtraceback_1_1_frac10  dbgtraceback_1_1_frac16  dpu.cmake  errRate.md  hedges_pipeline.py  install.sh  perf.ods  test_program.py  xferItf.h
.cmakeDpuProject/: CMakeLists.txt
.github/workflows/: docker-build-image.yml
data/: WizardOfOzInEsperanto.txt  sample_linux_test_output.txt  sample_windows_test_output.txt
docker/debian10/: Dockerfile
docker/ubuntu18/: Dockerfile
hedges/: NRpyDNAcode.cpp  NRpyRS.cpp  common.h  dpu_hedges_decoder.c  dpu_hedges_encoder.c  heap.h  heap_1_1.h  heapscheduler.h  nr3python.h  ran.h  reed_solomon_schifra.h
perf/: deprecated_perf_naiveheap_quantfixp64p10_hlimit50k  perf_0_1_hlimit_49500  perf_1_1_hlimit_49000  perf_analysis_notes  perf_naiveheap_quantfixp64p10_hlimit5k
perf_deprecated_format/: perf_analysis_notes  w_h01_50000_cr4  w_h11_64000_cr3  w_h11_85000_cr3  w_h11_85000_cr4_irate0_01398  w_h11_85000_cr5  w_h11_92500_cr3  w_h11_92500_cr3_lowErrorRate  w_h11_92500_cr3_statistics  w_h11_92500_cr4  w_h11_92500_cr4_statistics  w_h11_92500_cr5  w_h11_93000_cr4_irate0_01398
perf_deprecated_format/deprecated/: deprecated_perf_naiveheap_quantfixp64p10_hlimit50k  deprecated_perf_naiveheap_quantfixp64p10_hlimit5k  h01_49000_fixR_cr4  h11_49000_fixR_cr4  h11_49000_fixR_cr4_statistics  h11_59000_fixR_cr4  h11_59000_fixR_cr4_irate0_0139_statistics  h11_59000_fixR_cr4_irate0_039  perf_1_1_hlimit_49000
